--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.k_nakamura.horiojapan.kousaku.saitama_u.fileexplorer" >
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,6 +25,10 @@
         <activity
             android:name=".ShowImageActivity"
             android:label="@string/title_activity_show_image" >
+        </activity>
+        <activity
+            android:name=".ThumbnailTestActivity"
+            android:label="@string/title_activity_thumbnail_test" >
         </activity>
     </application>
 
